<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="DUT_GroupStatus" Id="{8da24330-28fc-457b-af4f-78411d1da7e7}">
    <Declaration><![CDATA[TYPE DUT_GroupStatus :
STRUCT
	CurrentPosition: DUT_COORD_REF;
	Valid: BOOL;
	Busy: BOOL;
	GroupMoving: BOOL;
	GroupHoming: BOOL;
	GroupErrorStop: BOOL;
	GroupNotReady: BOOL;
	GroupStandby: BOOL;
	GroupStopping: BOOL;
	GroupDisabled: BOOL;
	AllAxesStanding: BOOL;
	InPosition: BOOL;
	Error: BOOL;
	ErrorID: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>